--- a/notebooks/understanding-back-propagation.ipynb
+++ b/notebooks/understanding-back-propagation.ipynb
@@ -291,7 +291,7 @@
     "During each iteration phase each weight of the ANN will be adjusted based on the following formula:\n",
     "\n",
     "$\n",
-    "    w_{n+1}= w_n - R * \\frac{\\partial Loss}{\\partial w}\n",
+    "    w_{n+1}= w_n - R * \\frac{\\partial C}{\\partial w}\n",
     "$\n",
     "\n",
     "where:\n",
@@ -301,7 +301,7 @@
     "| $w_n$      | The weight during the n-th epoch       |\n",
     "| $w_{n+1}$   | The weight during the n epoch (next to n)        |\n",
     "|R|The learning rate|\n",
-    "|$\\frac{\\partial Loss}{\\partial w}$|The partial derivative of loss over weight|\n"
+    "|$\\frac{\\partial C}{\\partial w}$|The partial derivative of Cost over weight|\n"
    ]
   },
   {
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd0d54ae",
+   "id": "bb359ba2",
    "metadata": {},
    "outputs": [],
    "source": []
