--- a/notebooks/understanding-back-propagation.ipynb
+++ b/notebooks/understanding-back-propagation.ipynb
@@ -57,11 +57,24 @@
     "\n",
     "#### How the NN model creation differs from classical programming\n",
     "\n",
-    "Note that aside from the single pair of numbers we are not given anything else. We do not have any other information about our data that would allow us to solve the problem following a **classical** programming approch.  \n",
+    "Note that aside from the collected data for input and output we are not given anything else. We do not have any other information about our data that would allow us to solve the problem following a **classical** programming approch.  \n",
     "\n",
     "In **classical** programming we are given a set predifined set of rules that when used they lead us to the expected result.\n",
     "\n",
     "In **machine learning** model creation we know in advance the input and the output and our objective is to find the algorithm that will allow use to predict values to new inputs that we have not seen before.\n",
+    "\n",
+    "In **Traditional Programming** the input(s) are passed to a deterministic flowchart (algorithm) which produces the output:\n",
+    "\n",
+    "![traditional-programming](traditional-programming.png)\n",
+    "\n",
+    "When **training** a neural network we are passing both the input and the expected output to the training function which discovers and fits a set of **weights**  that resembles the relation between input and output:\n",
+    "\n",
+    "![training-ANN](training-ANN.png)\n",
+    "\n",
+    "\n",
+    "A **trained** ANN receives unseen input, uses the **weights** that were found during the training phase and **predicts** the corresponding output.\n",
+    "\n",
+    "![predicting-using-NN](predicting-using-NN.png)\n",
     "\n",
     "#### The main idea behind a neural network\n",
     "\n",
@@ -378,7 +391,7 @@
    "id": "476ce47e",
    "metadata": {},
    "source": [
-    "#### Estimating the best value for the one synapsis ANN\n",
+    "#### Understanding the simpler possible ANN (consisting of only two neurons)\n",
     "\n",
     "The data that we need in order to **train** our model are the simplest possible and consider of just a pair of an input and its desiser output.  Some as simple as the following is enough for us to start our first contact with neural networks.\n",
     "\n",
@@ -588,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb359ba2",
+   "id": "c4c2b58a",
    "metadata": {},
    "outputs": [],
    "source": []
