Adds 3 layers ANN example.

--- a/notebooks/understanding-back-propagation.ipynb
+++ b/notebooks/understanding-back-propagation.ipynb
@@ -106,7 +106,7 @@
     "We pretend that we do not now the logic that is hidden behind the input-ouput set (meaning that the output is simply the half of the input).  Still, based on what we presented above, about how the ANN work we start with the assumption that we can model the relation as the following polynomial:\n",
     "\n",
     "$\n",
-    "y = x_0 \\times w_1\n",
+    "\\Large y = x_0 \\times w_1\n",
     "$\n",
     "\n",
     "![high level view of simplest possible ANN](simplest-possible-ann.png)\n",
@@ -129,7 +129,7 @@
     "One commonly used lossed function is **Mean Squared Error (MSE)** which is expressed by the following formula:\n",
     "\n",
     "$\n",
-    "C = \\frac{1}{N} \\sum_{i=1}^{N} (y_i - Y)^2\n",
+    "\\Large C = \\frac{1}{N} \\sum_{i=1}^{N} (y_i - Y)^2\n",
     "$\n",
     "\n",
     "\n",
@@ -144,7 +144,7 @@
     "As a starting point to understanding the training of the ANN it helps to make things more intuitive and think of the **Cost** function as a a unique calculation expesses by the following equation:\n",
     "\n",
     "$\n",
-    "C = (y - Y) ^ 2\n",
+    "\\Large C = (y - Y) ^ 2\n",
     "$\n",
     "\n",
     "The above **Cost** function is a **parabola** that can be graphed as follows (assuming that $Y=0.4$):\n",
@@ -185,13 +185,13 @@
     "Using calculus I we can easily calcuate the derivate of the Loss function:\n",
     "\n",
     "$ \n",
-    "y=(x-a)^2= x^2-2ax+a^2\n",
+    "\\Large y=(x-a)^2= x^2-2ax+a^2\n",
     "$\n",
     "\n",
     "so:\n",
     "\n",
     "$\n",
-    "\\frac{dy}{dx}=2(x-a)\n",
+    "\\Large \\frac{dy}{dx}=2(x-a)\n",
     "$\n",
     "\n",
     "#### Plot the tangent lines two arbitrary points\n",
@@ -199,7 +199,7 @@
     "For a given point X that belongs to the loss function the equation for the tangent line to it is given by the following:\n",
     "\n",
     " $\n",
-    " g(x) = f'(X) (x-X) + f(X)\n",
+    " \\Large g(x) = f'(X) (x-X) + f(X)\n",
     " $ \n",
     " \n",
     " which graphically results to the following represenation:"
@@ -248,17 +248,17 @@
     "See for example:\n",
     "\n",
     "$\n",
-    "f'(1.5) = 2.2\n",
+    "\\Large f'(1.5) = 2.2\n",
     "$\n",
     "\n",
     "$\n",
-    "f'(-0.5) = -1.8\n",
+    "\\Large f'(-0.5) = -1.8\n",
     "$\n",
     "\n",
     "It is easy to prove that the minimum value of our function will be 0 and this will be the outcome of the function when x becomes a:\n",
     "\n",
     "$ \n",
-    "minf(x) = f(a) = 0\n",
+    "\\Large minf(x) = f(a) = 0\n",
     "$\n",
     "\n",
     "Also we can see that the slope of the tangent line (derivative) for our function has a positive value when we are on the right of $x=a$ and negative when on the left.  This is very important for our procedeure as it dicatates the **sign** of the alteration we need to apply to x; in other words if the slope will be postive we will need to subtract a small value from the current value otherise we will add to it.\n",
@@ -304,17 +304,23 @@
     "During each iteration phase each weight of the ANN will be adjusted based on the following formula:\n",
     "\n",
     "$\n",
-    "    w_{n+1}= w_n - R * \\frac{\\partial C}{\\partial w}\n",
+    "   \\Large w_{n+1}= w_n - R * \\frac{\\partial C}{\\partial w}\n",
     "$\n",
     "\n",
     "where:\n",
     "\n",
-    "| Syntax      | Description |\n",
-    "| ----------- | ----------- |\n",
-    "| $w_n$      | The weight during the n-th epoch       |\n",
-    "| $w_{n+1}$   | The weight during the n epoch (next to n)        |\n",
-    "|R|The learning rate|\n",
-    "|$\\frac{\\partial C}{\\partial w}$|The partial derivative of Cost over weight|\n"
+    "| Syntax                               | Description                              |\n",
+    "| -------------------------------------| -----------------------------------------|\n",
+    "| wn+1                    | The weight during the n + 1 epoch            |\n",
+    "|$\\Large w_n$                          | The weight during the n-th epoch         |\n",
+    "|$\\Large R $                           | The learning rate                        |\n",
+    "|$\\Large \\frac{\\partial C}{\\partial w}$|The partial derivative of Cost over weight|\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -330,48 +336,48 @@
     "We randomly assign a weight, let say 0.3 thus\n",
     "we know can have a prediction:\n",
     "\n",
-    "$x_1 = x_0 \\times w = 1 \\times 0.3 = 0.3$\n",
+    "$\\Large x_1 = x_0 \\times w = 1 \\times 0.3 = 0.3$\n",
     "\n",
     "since the expected output is 0.5 the **Cost** will be:\n",
     "\n",
-    "$C = (x_1 - Y)^2 = (0.3 - 0.5) ^2 = 0.04$\n",
+    "$\\Large C = (x_1 - Y)^2 = (0.3 - 0.5) ^2 = 0.04$\n",
     "\n",
     "Since the only parameter that can be changed in the NN is the weight, what we need is the \n",
     "rate of the Loss over weight or more formally:\n",
     "\n",
-    "$\\frac{\\partial L}{\\partial w}$\n",
+    "$\\Large \\frac{\\partial L}{\\partial w}$\n",
     "\n",
     "\n",
     "As discussed above the derivate of the cost function will be\n",
     "\n",
     "$\n",
-    "\\frac{\\partial C}{ \\partial x}=2(x_1 - Υ)\n",
+    "\\Large\\frac{\\partial C}{ \\partial x}=2(x_1 - Υ)\n",
     "$\n",
     "\n",
     "while the derivate of the predicted value will be:\n",
     "\n",
     "$\n",
-    "\\frac{\\partial x}{\\partial w}=x_0\n",
+    "\\Large\\frac{\\partial x}{\\partial w}=x_0\n",
     "$\n",
     "\n",
     "$\n",
-    "\\frac{\\partial C}{\\partial w} = \\frac{\\partial C}{\\partial x} \\times  \\frac{\\partial x}{\\partial w}  \\Rightarrow \n",
+    "\\Large\\Large\\frac{\\partial C}{\\partial w} = \\frac{\\partial C}{\\partial x} \\times  \\frac{\\partial x}{\\partial w}  \\Rightarrow \n",
     "$\n",
     "\n",
     "\n",
     "$\n",
-    "\\frac{\\partial L}{\\partial w} = 2(x_1 - Υ) \\times x_0 \\Rightarrow \n",
+    "\\Large\\frac{\\partial L}{\\partial w} = 2(x_1 - Υ) \\times x_0 \\Rightarrow \n",
     "$\n",
     "\n",
     "$\n",
-    "\\frac{\\partial L}{\\partial w} = 2(x_0 \\times w_0 - Υ) \\times x_0\n",
+    "\\Large\\frac{\\partial L}{\\partial w} = 2(x_0 \\times w_0 - Υ) \\times x_0\n",
     "$\n",
     "\n",
     "\n",
     "So the new weight will be given by the following formula:\n",
     "\n",
     "$\n",
-    "w_1 = w_0 - R\\times 2(x_0 \\times w_0 - Υ) \\times x_0\n",
+    "\\Large w_1 = w_0 - R\\times 2(x_0 \\times w_0 - Υ) \\times x_0\n",
     "$\n",
     "\n",
     "By substituding the follwing values:\n",
@@ -398,7 +404,13 @@
     "| Input| Output |\n",
     "| --- | --- |\n",
     "| 1 | 0.5 |\n",
-    "\n"
+    "\n",
+    "\n",
+    "We can visualize this ANN as follows:\n",
+    "\n",
+    "![simplest-nn](simplest-nn.png)\n",
+    "\n",
+    "And following the algorithm that is presented above we can code a training session as follows:"
    ]
   },
   {
@@ -599,9 +611,141 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "95f8feb2",
+   "metadata": {},
+   "source": [
+    "#### Adding a hidden layer to the 2 neural NN\n",
+    "\n",
+    "Now that we understand the simplest possible case of an ANN that consists\n",
+    "of two neurons (or two layers having a single neuron each one) we can add\n",
+    "more layers (again consisting of a single neuron) and see how the above\n",
+    "mechanism to train the weights can be generalized.\n",
+    "\n",
+    "Keep the rest of the constraints, let' add one more **hidden layer** to the\n",
+    "above network which now will look as follows:\n",
+    "\n",
+    "![3 layered NN](ann-3-layers.png)\n",
+    "\n",
+    "We are given the values for the input x0, the weights w1 and w2 are assigned \n",
+    "randomly, we are given the expected value Y and our objective is to **train**\n",
+    "the ANN assigning to the weights w1 and w2 the best values we can find so the \n",
+    "Cost (or loss or error) will be minimized.\n",
+    "\n",
+    "Repeating what we have done above, the cost function will be:\n",
+    "\n",
+    "$\\Large C = (x_2 - Y) ^2$ \n",
+    "\n",
+    "while its **gradient descent** (here derivative) will be the following:\n",
+    "\n",
+    "\n",
+    "$\n",
+    "\\Large\\frac{\\partial C}{\\partial x_2} = 2(x_2 - Υ) \n",
+    "$\n",
+    "\n",
+    "The objective is to run serveral consecutive iterations trying to adjust the \n",
+    "randomly selected weights trying to minimize the **Cost**.\n",
+    "\n",
+    "Assuming a learning rate of **η** the new weight for each iteration will be \n",
+    "given from the following formula:\n",
+    "\n",
+    "$\\Large w_i' = w_i - \\eta \\times  \\frac{\\partial C}{\\partial w_i}$\n",
+    "\n",
+    "What we are missing for now from the above formula is the following:\n",
+    "\n",
+    "$\\Large \\frac{\\partial C}{\\partial w_i}$\n",
+    "\n",
+    "which can be thought as the **impact** that a particular weigtht has on\n",
+    "the **Cost**.  Note though that we already have the rate of how much a change\n",
+    "in the value of $\\Large x_2$ is affecting the cost $\\Large\\frac{\\partial C}{\\partial x_2}$.\n",
+    "\n",
+    "# PAY ATTENTION HERE !\n",
+    "\n",
+    "## Step 1: Calculate the next value for $\\Large w_2$\n",
+    "\n",
+    "This step is one of the MOST important to understand how backpropagation works, \n",
+    "so please read carefully:\n",
+    "\n",
+    "We want to calculate: $\\Large \\frac{\\partial C}{\\partial w_2}$ so, let's try the following trick:\n",
+    "\n",
+    "Is it possible for us to write our expression as follows?\n",
+    "\n",
+    "$\\Large \\frac{\\partial ?}{\\partial w_2} \\times \\frac{\\partial C}{\\partial ?}$\n",
+    "\n",
+    "Think now: Can we substitue $\\Large {\\partial ?}$ with something that will result \n",
+    "to two partial derivatives that is known to us? \n",
+    "\n",
+    "If we can do so then we would have our prolbem solved (applying the **CHAIN RULE** from Calculus)\n",
+    "\n",
+    "Since we already have calculated: $\\Large\\frac{\\partial C}{\\partial x_2}$\n",
+    "\n",
+    "we immediatly think if we can try the following:\n",
+    "\n",
+    "$\\Large \\frac{\\partial x_2}{\\partial w_2} \\times \\frac{\\partial C}{\\partial x_2}$\n",
+    "\n",
+    "or in other words to calculate the following expression:\n",
+    "\n",
+    "$\\Large \\frac{\\partial x_2}{\\partial w_2}$\n",
+    "\n",
+    "which expresses the impact of $\\Large w_2$ to $\\Large x_2$\n",
+    "\n",
+    "and we are in luck since this derivative is really easy to calculate:\n",
+    "\n",
+    "since $\\Large x_2 = x1 \\times w_2$ then \n",
+    "\n",
+    "$\n",
+    "\\Large \\frac{\\partial x_2}{\\partial w_2} = x_1 \n",
+    "$\n",
+    "\n",
+    "\n",
+    "So we can now calculate:\n",
+    "\n",
+    "$\\Large \\frac{\\partial C}{\\partial w_2} = \\Large \\frac{\\partial x_2}{\\partial w_2} \\times \\frac{\\partial C}{\\partial x_2}  = x_1 \\times 2(x_2 - Υ)  $\n",
+    "\n",
+    "while the new value for $w_2$ for the next iteration will be:\n",
+    "\n",
+    "$\\Large w_2' = w_2 - \\eta \\times  x_1 \\times 2(x_2 - Υ)$\n",
+    "\n",
+    "## Step 2: Calculate the next value for $\\Large w_1$\n",
+    "\n",
+    "Now, we need to calculate: $\\Large \\frac{\\partial C}{\\partial w_1}$ \n",
+    "\n",
+    "we think similarly to before but with one more trick! We will have to add one more\n",
+    "layer to our **chain** of derivations as follows:\n",
+    "\n",
+    "$\\Large \\frac{\\partial C}{\\partial w_1}$ \n",
+    "\n",
+    "\n",
+    "$\\Large \\frac{\\partial C}{\\partial w_1} = \\Large \\frac{\\partial ? }{\\partial w_1} \\times \\Large \\frac{\\partial x_2}{\\partial ?} \\times \\frac{\\partial C}{\\partial x_2} $\n",
+    "\n",
+    "Now is is easly to see that the question mark should be substituted by the ${\\Large \\partial x_1}$\n",
+    "\n",
+    "and our expression now it will become:\n",
+    "\n",
+    "$\\Large \\frac{\\partial C}{\\partial w_1} = \\Large \\frac{\\partial x_1 }{\\partial w_1} \\times \\Large \\frac{\\partial x_2}{\\partial x_1} \\times \\frac{\\partial C}{\\partial x_2} $\n",
+    "\n",
+    "\n",
+    "Since,\n",
+    "\n",
+    "$\\Large \\frac {\\partial x_1} {\\partial w_1}  = x_0$\n",
+    "\n",
+    "$\\Large \\frac {\\partial x_2} {\\partial x_1}  = w_2$\n",
+    "\n",
+    "$\\Large\\frac{\\partial C}{\\partial x_2} = 2(x_2 - Υ)$\n",
+    "\n",
+    "we have:\n",
+    "\n",
+    "$\\Large \\frac{\\partial C}{\\partial w_1} = x_0 \\times w_2 \\times 2(x_2 - Y) $ \n",
+    "\n",
+    "and \n",
+    "\n",
+    "$\\Large w_1' = w_1 - \\eta \\times  x_0 \\times w_2 \\times 2(x_2 - Y)$\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4c2b58a",
+   "id": "295fc534",
    "metadata": {},
    "outputs": [],
    "source": []
