Adds the (simple) multiple hidden layers calcuations.

--- a/notebooks/understanding-back-propagation.ipynb
+++ b/notebooks/understanding-back-propagation.ipynb
@@ -755,6 +755,39 @@
     "\n",
     "$\\Large w_1' = w_1 - \\eta \\times  x_0 \\times w_2 \\times 2(x_2 - Y)$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Adding more hidden layers\n",
+    "\n",
+    "The process we have described above can now be generalized to cover as many\n",
+    "hidden layers we need.\n",
+    "\n",
+    "Here is how we can carry on the chain rule to any number of hidden layers.\n",
+    "\n",
+    "Try to understand how this is possible:\n",
+    "\n",
+    "![nn-multiple-hidden-layers](./images/nn-multiple-hidden-layers.png)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
