Explains how the chain rule works with an example.

--- a/notebooks/understanding-back-propagation.ipynb
+++ b/notebooks/understanding-back-propagation.ipynb
@@ -766,7 +766,26 @@
     "\n",
     "Here is how we can carry on the chain rule to any number of hidden layers.\n",
     "\n",
-    "Try to understand how this is possible:\n",
+    "Try to understand how this is possible\n",
+    "\n",
+    "Hint: The key is to realize that the formula:\n",
+    "\n",
+    "$\n",
+    "\\Large x_i = w_i \\times x_{i-1}\n",
+    "$\n",
+    "\n",
+    "allows us to calculate both:\n",
+    "\n",
+    "$\n",
+    "\\Large \\frac {\\partial x_i} {\\partial w_i} = x_{i-1}\n",
+    "$\n",
+    "\n",
+    "and\n",
+    "\n",
+    "$\n",
+    "\\Large \\frac {\\partial x_i} {\\partial x_{i-1}} = w_i\n",
+    "$\n",
+    "\n",
     "\n",
     "![nn-multiple-hidden-layers](./images/nn-multiple-hidden-layers.png)"
    ],
