Refactors document layout.

--- a/notebooks/01-02-linear_regression.ipynb
+++ b/notebooks/01-02-linear_regression.ipynb
@@ -330,12 +330,17 @@
     "The rest of the proof can be seen the following images:\n",
     "\n",
     "\n",
-    "![simple-linear-regression-1.jpg](./images/simple-linear-regression-1.jpg)\n",
-    "![simple-linear-regression-2.jpg](./images/simple-linear-regression-2.jpg)\n"
+    "![simple-linear-regression-1](simple-linear-regression-1.jpg)\n",
+    "![simple-linear-regression-2](simple-linear-regression-2.jpg)\n"
    ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Closed Solution \n",
     "\n",
@@ -354,32 +359,7 @@
     "|Normality|For any fixed value of X, Y is normally distributed.|\n",
     "\n",
     "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   ]
   }
  ],
  "metadata": {
