--- a/notebooks/01-03-nn-introduction.ipynb
+++ b/notebooks/01-03-nn-introduction.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "Aartificial neural networks (ANN) are inspired from biological neural networks and to some extend try to mimic the way the human brain is learning.  The human brain contains over 100 billion interconnected neurons and each of them one consists of three main components: soma, axon and dendrietes as can be seem in the following image (taken from https://en.wikipedia.org/wiki/Biological_neuron_model)\n",
     "\n",
-    "![Human Brain](soma-axon-dentrites.png)\n",
+    "![Human Brain](soma-axon-dentrites.png \"Human Brain\")\n",
     "\n",
     "#### How ANN resembles biological neural networks\n",
     "\n",
@@ -70,9 +70,7 @@
     "\n",
     "We pretend that we do not now the logic that is hidden behind the input-ouput set (meaning that the output is simply the half of the input).  Still, based on what we presented above, about how the ANN work we start with the assumption that we can model the relation as the following polynomial:\n",
     "\n",
-    "$\n",
-    "\\Large y = x_0 \\times w_1\n",
-    "$\n",
+    "$\\Large y = x_0 \\times w_1$\n",
     "\n",
     "![high level view of simplest possible ANN](simplest-possible-ann.png)\n",
     "\n",
@@ -93,9 +91,7 @@
     "\n",
     "One commonly used lossed function is **Mean Squared Error (MSE)** which is expressed by the following formula:\n",
     "\n",
-    "$\n",
-    "\\Large C = \\frac{1}{N} \\sum_{i=1}^{N} (y_i - Y)^2\n",
-    "$\n",
+    "$\\Large C = \\frac{1}{N} \\sum_{i=1}^{N} (y_i - Y)^2$\n",
     "\n",
     "\n",
     "\n",
@@ -108,9 +104,7 @@
     "\n",
     "As a starting point to understanding the training of the ANN it helps to make things more intuitive and think of the **Cost** function as a a unique calculation expesses by the following equation:\n",
     "\n",
-    "$\n",
-    "\\Large C = (y - Y) ^ 2\n",
-    "$\n",
+    "$\\Large C = (y - Y) ^ 2$\n",
     "\n",
     "The above **Cost** function is a **parabola** that can be graphed as follows (assuming that $Y=0.4$):\n",
     "\n"
@@ -118,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "c52abefb",
    "metadata": {},
    "outputs": [],
@@ -132,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "16949767",
    "metadata": {
     "pycharm": {
@@ -158,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "ec62e242",
    "metadata": {},
    "outputs": [
@@ -189,30 +183,24 @@
     "If we write our function as follows:\n",
     "Using calculus I we can easily calcuate the derivate of the Loss function:\n",
     "\n",
-    "$ \n",
-    "\\Large y=(x-a)^2= x^2-2ax+a^2\n",
-    "$\n",
+    "$ \\Large y=(x-a)^2= x^2-2ax+a^2$\n",
     "\n",
     "so:\n",
     "\n",
-    "$\n",
-    "\\Large \\frac{dy}{dx}=2(x-a)\n",
-    "$\n",
+    "$\\Large \\frac{dy}{dx}=2(x-a)$\n",
     "\n",
     "#### Plot the tangent lines two arbitrary points\n",
     "\n",
     "For a given point X that belongs to the loss function the equation for the tangent line to it is given by the following:\n",
     "\n",
-    " $\n",
-    " \\Large g(x) = f'(X) (x-X) + f(X)\n",
-    " $ \n",
+    "$\\Large g(x) = f'(X) (x-X) + f(X)$ \n",
     " \n",
-    " which graphically results to the following represenation:"
+    "which graphically results to the following represenation:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "66ea0ecc",
    "metadata": {
     "pycharm": {
@@ -257,25 +245,19 @@
     "\n",
     "See for example:\n",
     "\n",
-    "$\n",
-    "\\Large f'(1.5) = 2.2\n",
-    "$\n",
+    "$\\Large f'(1.5) = 2.2$\n",
     "\n",
-    "$\n",
-    "\\Large f'(-0.5) = -1.8\n",
-    "$\n",
+    "$\\Large f'(-0.5) = -1.8$\n",
     "\n",
     "It is easy to prove that the minimum value of our function will be 0 and this will be the outcome of the function when x becomes a:\n",
     "\n",
-    "$ \n",
-    "\\Large minf(x) = f(a) = 0\n",
-    "$\n",
+    "$\\Large minf(x) = f(a) = 0$\n",
     "\n",
     "Also we can see that the slope of the tangent line (derivative) for our function has a positive value when we are on the right of $x=a$ and negative when on the left.  This is very important for our procedeure as it dicatates the **sign** of the alteration we need to apply to x; in other words if the slope will be postive we will need to subtract a small value from the current value otherise we will add to it.\n",
     "\n",
     "So, if we pretend that we do not know the analytical solution of how to find the minimum value for the function $f(x)$ we can start from any arbitrary value of x and start moving accros the axis of x until we will find the value of x that will have the minimum value.\n",
     "\n",
-    "![Finding the minimum Value](backprog-1.png)\n",
+    "![Finding the minimum Value](backprog-1.png \"Finding the minimum Value\")\n",
     "\n",
     "As we can see in the above picture, we need to move the $x$ by a value $Δx$ towards the **left** direction (meaning subtracting a small value) to find a lower value for $y$.  \n",
     "\n",
@@ -313,9 +295,7 @@
     "\n",
     "During each iteration phase each weight of the ANN will be adjusted based on the following formula:\n",
     "\n",
-    "$\n",
-    "   \\Large w_{n+1}= w_n - R * \\frac{\\partial C}{\\partial w}\n",
-    "$\n",
+    "$\\Large w_{n+1}= w_n - R * \\frac{\\partial C}{\\partial w}$\n",
     "\n",
     "where:\n",
     "\n",
@@ -323,14 +303,8 @@
     "| -------------------------------------| -----------------------------------------|\n",
     "| wn+1                    | The weight during the n + 1 epoch            |\n",
     "|$\\Large w_n$                          | The weight during the n-th epoch         |\n",
-    "|$\\Large R $                           | The learning rate                        |\n",
-    "|$\\Large \\frac{\\partial C}{\\partial w}$|The partial derivative of Cost over weight|\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "|$\\Large R$                           | The learning rate                        |\n",
+    "|$\\Large \\frac{\\partial C}{\\partial w}$|The partial derivative of Cost over weight|\n"
    ]
   },
   {
@@ -360,35 +334,23 @@
     "\n",
     "As discussed above the derivate of the cost function will be\n",
     "\n",
-    "$\n",
-    "\\Large\\frac{\\partial C}{ \\partial x}=2(x_1 - Υ)\n",
-    "$\n",
+    "$\\Large\\frac{\\partial C}{ \\partial x}=2(x_1 - Υ)$\n",
     "\n",
     "while the derivate of the predicted value will be:\n",
     "\n",
-    "$\n",
-    "\\Large\\frac{\\partial x}{\\partial w}=x_0\n",
-    "$\n",
+    "$\\Large\\frac{\\partial x}{\\partial w}=x_0$\n",
     "\n",
-    "$\n",
-    "\\Large\\Large\\frac{\\partial C}{\\partial w} = \\frac{\\partial C}{\\partial x} \\times  \\frac{\\partial x}{\\partial w}  \\Rightarrow \n",
-    "$\n",
+    "$\\Large\\Large\\frac{\\partial C}{\\partial w} = \\frac{\\partial C}{\\partial x} \\times  \\frac{\\partial x}{\\partial w}  \\Rightarrow$\n",
     "\n",
     "\n",
-    "$\n",
-    "\\Large\\frac{\\partial L}{\\partial w} = 2(x_1 - Υ) \\times x_0 \\Rightarrow \n",
-    "$\n",
+    "$\\Large\\frac{\\partial L}{\\partial w} = 2(x_1 - Υ) \\times x_0 \\Rightarrow$\n",
     "\n",
-    "$\n",
-    "\\Large\\frac{\\partial L}{\\partial w} = 2(x_0 \\times w_0 - Υ) \\times x_0\n",
-    "$\n",
+    "$\\Large\\frac{\\partial L}{\\partial w} = 2(x_0 \\times w_0 - Υ) \\times x_0$\n",
     "\n",
     "\n",
     "So the new weight will be given by the following formula:\n",
     "\n",
-    "$\n",
-    "\\Large w_1 = w_0 - R\\times 2(x_0 \\times w_0 - Υ) \\times x_0\n",
-    "$\n",
+    "$\\Large w_1 = w_0 - R\\times 2(x_0 \\times w_0 - Υ) \\times x_0$\n",
     "\n",
     "By substituding the follwing values:\n",
     "\n",
@@ -418,14 +380,14 @@
     "\n",
     "We can visualize this ANN as follows:\n",
     "\n",
-    "![simplest-nn](./images/simplest-nn.png)\n",
+    "![simplest-nn](simplest-nn.png)\n",
     "\n",
     "And following the algorithm that is presented above we can code a training session as follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "329c5c79",
    "metadata": {},
    "outputs": [
@@ -456,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "91290708",
    "metadata": {},
    "outputs": [
@@ -563,7 +525,7 @@
        "[206 rows x 2 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "84ca7f8e",
    "metadata": {},
    "outputs": [
@@ -597,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "4d2de755",
    "metadata": {
     "scrolled": true
@@ -653,9 +615,7 @@
     "while its **gradient descent** (here derivative) will be the following:\n",
     "\n",
     "\n",
-    "$\n",
-    "\\Large\\frac{\\partial C}{\\partial x_2} = 2(x_2 - Υ) \n",
-    "$\n",
+    "$\\Large\\frac{\\partial C}{\\partial x_2} = 2(x_2 - Υ)$\n",
     "\n",
     "The objective is to run serveral consecutive iterations trying to adjust the \n",
     "randomly selected weights trying to minimize the **Cost**.\n",
@@ -707,14 +667,12 @@
     "\n",
     "since $\\Large x_2 = x1 \\times w_2$ then \n",
     "\n",
-    "$\n",
-    "\\Large \\frac{\\partial x_2}{\\partial w_2} = x_1 \n",
-    "$\n",
+    "$\\Large \\frac{\\partial x_2}{\\partial w_2} = x_1$\n",
     "\n",
     "\n",
     "So we can now calculate:\n",
     "\n",
-    "$\\Large \\frac{\\partial C}{\\partial w_2} = \\Large \\frac{\\partial x_2}{\\partial w_2} \\times \\frac{\\partial C}{\\partial x_2}  = x_1 \\times 2(x_2 - Υ)  $\n",
+    "$\\Large \\frac{\\partial C}{\\partial w_2} = \\Large \\frac{\\partial x_2}{\\partial w_2} \\times \\frac{\\partial C}{\\partial x_2}  = x_1 \\times 2(x_2 - Υ)$\n",
     "\n",
     "while the new value for $w_2$ for the next iteration will be:\n",
     "\n",
@@ -730,13 +688,13 @@
     "$\\Large \\frac{\\partial C}{\\partial w_1}$ \n",
     "\n",
     "\n",
-    "$\\Large \\frac{\\partial C}{\\partial w_1} = \\Large \\frac{\\partial ? }{\\partial w_1} \\times \\Large \\frac{\\partial x_2}{\\partial ?} \\times \\frac{\\partial C}{\\partial x_2} $\n",
+    "$\\Large \\frac{\\partial C}{\\partial w_1} = \\Large \\frac{\\partial ? }{\\partial w_1} \\times \\Large \\frac{\\partial x_2}{\\partial ?} \\times \\frac{\\partial C}{\\partial x_2}$\n",
     "\n",
     "Now is is easly to see that the question mark should be substituted by the ${\\Large \\partial x_1}$\n",
     "\n",
     "and our expression now it will become:\n",
     "\n",
-    "$\\Large \\frac{\\partial C}{\\partial w_1} = \\Large \\frac{\\partial x_1 }{\\partial w_1} \\times \\Large \\frac{\\partial x_2}{\\partial x_1} \\times \\frac{\\partial C}{\\partial x_2} $\n",
+    "$\\Large \\frac{\\partial C}{\\partial w_1} = \\Large \\frac{\\partial x_1 }{\\partial w_1} \\times \\Large \\frac{\\partial x_2}{\\partial x_1} \\times \\frac{\\partial C}{\\partial x_2}$\n",
     "\n",
     "\n",
     "Since,\n",
@@ -749,7 +707,7 @@
     "\n",
     "we have:\n",
     "\n",
-    "$\\Large \\frac{\\partial C}{\\partial w_1} = x_0 \\times w_2 \\times 2(x_2 - Y) $ \n",
+    "$\\Large \\frac{\\partial C}{\\partial w_1} = x_0 \\times w_2 \\times 2(x_2 - Y)$ \n",
     "\n",
     "and \n",
     "\n",
@@ -776,21 +734,15 @@
     "\n",
     "Hint: The key is to realize that the formula:\n",
     "\n",
-    "$\n",
-    "\\Large x_i = w_i \\times x_{i-1}\n",
-    "$\n",
+    "$\\Large x_i = w_i \\times x_{i-1}$\n",
     "\n",
     "allows us to calculate both:\n",
     "\n",
-    "$\n",
-    "\\Large \\frac {\\partial x_i} {\\partial w_i} = x_{i-1}\n",
-    "$\n",
+    "$\\Large \\frac {\\partial x_i} {\\partial w_i} = x_{i-1}$\n",
     "\n",
     "and\n",
     "\n",
-    "$\n",
-    "\\Large \\frac {\\partial x_i} {\\partial x_{i-1}} = w_i\n",
-    "$\n",
+    "$\\Large \\frac {\\partial x_i} {\\partial x_{i-1}} = w_i$\n",
     "\n",
     "For example lets find the new weight for $\n",
     "\n",
@@ -821,7 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "695313c9",
+   "id": "3481ac94",
    "metadata": {},
    "outputs": [],
    "source": []
